[BTWCT-12314] Fixed | IE11 container component image is stretched

--- a/waters-aem-frontend/src/styles/banner.scss
+++ b/waters-aem-frontend/src/styles/banner.scss
@@ -17,6 +17,7 @@
         top: 0;
         width: 100%;
         height: 100%;
+        overflow: hidden;
 
         > div {
             width: 100%;
@@ -26,11 +27,18 @@
 
         img {
             width: 100%;
-            object-fit: cover;
-            height: 100%;
+            height: auto;
+            top: 50%;
+            left: 50%;
+            position: absolute;
+            transform: translate(-50%, -43.1%);
 
             @include mobile {
-                height: 100%;
+                transform: translate(-50%, -48.5%);
+            }
+
+            @include tablet {
+                transform: translate(-50%, -45.3%);
             }
         }
 
